--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/form.css">
+    <link rel="icon" href="images/jaguar_page_icon.png">
     <title>Jaguar contact</title>
 </head>
 <body>
