--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="images/jaguar_page_icon.png">
     <title>The Jaguar</title>
 </head>
 <body>
     <header class="header-container">
         <div class="header-title">
             <h1>The Jaguar</h1>
-            <p><em>Panthera onca</em></p>
+            <p class="p_header"><em>Panthera onca</em></p>
         </div>
         <div class="header-menu">
             <nav>
