--- a/links.html
+++ b/links.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/links.css">
+    <link rel="icon" href="images/jaguar_page_icon.png">
     <title>Jaguar links</title>
 </head>
 <body>
     <header class="header-container">
         <div class="header-title">
             <h1>The Jaguar</h1>
-            <p><em>Panthera onca</em></p>
+            <p class="p_header"><em>Panthera onca</em></p>
         </div>
         <div class="header-menu">
             <nav>
@@ -36,9 +37,9 @@
                 <ul>
                     <a href="https://www.iucnredlist.org/species/15953/123791436" target="_blank"><li>IUCN - Red List</li></a>
                     <a href="https://panthera.org/cat/jaguar" target="_blank"><li>Panthera</li></a>
-                    <a href="https://www.worldwildlife.org/species/jaguar" target="_blank"><li>WWF - World Wildlife Fund</li></a>
+                    <a href="https://www.worldwildlife.org/species/jaguar" target="_blank"><li>WWF</li></a>
                     <a href="https://www.bornfree.org.uk/jaguar-conservation" target="_blank"><li>Born Free</li></a>
-                    <a href="https://www.nationalgeographic.com/animals/mammals/facts/jaguar" target="_blank"><li>National Geographic - Jaguars</li></a>
+                    <a href="https://www.nationalgeographic.com/animals/mammals/facts/jaguar" target="_blank"><li>National Geographic</li></a>
                 </ul>
             </div>
             <div class="link_page_jaguar">
