updating images page

--- a/images.html
+++ b/images.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/style-all.css">
     <link rel="stylesheet" href="css/images.css">
     <link rel="icon" href="images/jaguar_page_icon.png">
     <title>Jaguar images</title>
@@ -30,11 +30,53 @@
         <img src="images/full-body-jaguar-drawing.png" alt="draw of a jaguar walking">
     </div>
 
+    <main>
+        <div class="images_container">
+            <div class="item_images">
+
+                    <img src="/images/panthera_hunting.jpg" alt="jaguar hunting an aligator" class="img_images">
+                    <span class="title_img">Jaguar hunting an aligator</span>
+
+            </div>
+            <div class="item_images">
+
+                    <img src="/images/panthera_sleeping.jpg" alt="Jaguar sleeping on a trees branch" class="img_images">
+                    <span class="title_img">Jaguar sleeping on a trees branch</span>
+
+            </div>
+            <div class="item_images">
+
+                    <img src="/images/panthera_swiming.jpg" alt="Jaguar swimming in a river" class="img_images">
+                    <span class="title_img">Jaguar swimming in a river</span>
+
+            </div>
+            <div class="item_images">
+
+                    <img src="/images/panthera-roaring.jpg" alt="Roar of a jaguar" class="img_images">
+                    <span class="title_img">Roar of a jaguar</span>
+
+            </div>
+            <div class="item_images">
+
+                    <img src="/images/panthera_melanism.jpg" alt="Melanic jaguar specimen" class="img_images">
+                    <span class="title_img">Melanic jaguar specimen</span>
+
+            </div>
+            <div class="item_images">
+
+                    <img src="/images/panthera_magesty.jpg" alt="Jaguar laying down looking forward" class="img_images">
+                    <span class="title_img">The beauty of a jaguar</span>
+
+            </div>
+
+        </div>
+    </main>
+
 
 
     <footer class="footer-container">
         <p>© Copyright 2023 Guilherme Pereira</p>
-        <div class="logos-picture   ">
+        <div class="logos-picture">
             <a href="https://www.instagram.com/oncafari/" target="_blank"><img src="images/instagram.png" alt="black and white instagram logo"></a>
             <a href="https://br.pinterest.com/search/pins/?q=panthera%20onca&rs=rs&eq=&etslf=3419" target="_blank"><img src="images/pinterest.png" alt="black and white pinterest logo"></a>
         </div>
