--- a/images.html
+++ b/images.html
@@ -35,37 +35,37 @@
             <div class="item_images">
 
                     <img src="/images/panthera_hunting.jpg" alt="jaguar hunting an aligator" class="img_images">
-                    <span class="title_img">Jaguar hunting an aligator</span>
+                    <span class="title_img">They can hunt large prey</span>
 
             </div>
             <div class="item_images">
 
                     <img src="/images/panthera_sleeping.jpg" alt="Jaguar sleeping on a trees branch" class="img_images">
-                    <span class="title_img">Jaguar sleeping on a trees branch</span>
+                    <span class="title_img">They like to sleep up the trees</span>
 
             </div>
             <div class="item_images">
 
                     <img src="/images/panthera_swiming.jpg" alt="Jaguar swimming in a river" class="img_images">
-                    <span class="title_img">Jaguar swimming in a river</span>
+                    <span class="title_img">These animals are well adapted to swim, and love it</span>
 
             </div>
             <div class="item_images">
 
                     <img src="/images/panthera-roaring.jpg" alt="Roar of a jaguar" class="img_images">
-                    <span class="title_img">Roar of a jaguar</span>
+                    <span class="title_img">Its bite can break even a tortoise's shell</span>
 
             </div>
             <div class="item_images">
 
                     <img src="/images/panthera_melanism.jpg" alt="Melanic jaguar specimen" class="img_images">
-                    <span class="title_img">Melanic jaguar specimen</span>
+                    <span class="title_img">This species can also have melanistic individuals</span>
 
             </div>
             <div class="item_images">
 
                     <img src="/images/panthera_magesty.jpg" alt="Jaguar laying down looking forward" class="img_images">
-                    <span class="title_img">The beauty of a jaguar</span>
+                    <span class="title_img">A full power jaguar with its majesty look</span>
 
             </div>
 
